# MFRC522_I2C_Library

./: CMakeLists.txt  MFRC522_I2C.cpp  MFRC522_I2C.h  README.md
src/: MFRC522_I2C.c  MFRC522_I2C.cpp  MFRC522_I2C.h
